# Projet-13-oc-lettings-site

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  Dockerfile.nginx  README.md  _docker-compose copy.yml  docker-compose.yml  nginx.conf  oc-lettings-site.sqlite3  pyproject.toml  render.yaml  setup.cfg
.github/workflows/: ci-cd.yml
doc/: conf.py  database_structure.rst  deployment_procedures.rst  index.rst  installation_instructions.rst  project_description.rst  technical_documentation.rst
doc/_build/: .buildinfo  database_structure.html  deployment_procedures.html  genindex.html  index.html  installation_instructions.html  project_description.html  quick_start_guide.html  searchindex.js  technical_documentation.html
doc/_build/.doctrees/: database_structure.doctree  deployment_procedures.doctree  environment.pickle  index.doctree  installation_instructions.doctree  modules_views.doctree  project_description.doctree  quick_start_guide.doctree  technical_documentation.doctree  technologies_and_languages.doctree  user_guide.doctree
doc/_build/_modules/lettings/: models.html
doc/_build/_modules/oc_lettings_site/: views.html
doc/_build/_modules/profiles/: models.html  (+1 more)
doc/_build/_sources/: database_structure.rst.txt  index.rst.txt  installation_instructions.rst.txt  modules_views.rst.txt  project_description.rst.txt  technical_documentation.rst.txt  technologies_and_languages.rst.txt  user_guide.rst.txt
doc/_build/doctrees/: database_structure.doctree  deployment_procedures.doctree  environment.pickle  index.doctree  installation_instructions.doctree  modules.doctree  modules_views.doctree  project_description.doctree  quick_start_guide.doctree  technical_documentation.doctree  technologies_and_languages.doctree  user_guide.doctree
doc/_build/html/: .buildinfo  database_structure.html  deployment_procedures.html  genindex.html  index.html  installation_instructions.html  modules.html  modules_views.html  objects.inv  project_description.html  py-modindex.html  quick_start_guide.html  search.html  searchindex.js  technical_documentation.html  technologies_and_languages.html  user_guide.html
doc/_static/: custom.css
lettings/: models.py  urls.py  views.py
lettings/migrations/: 0001_initial.py  0002_auto_20240628_1217.py  0003_alter_address_options.py
lettings/templates/lettings/: index.html  letting.html
lettings/tests/: test_models.py  test_views.py
migrations_backup/lettings/: 0001_initial.py  0002_auto_20240628_1217.py  0003_alter_address_options.py
migrations_backup/oc_lettings_site/: 0002_alter_address_id_alter_letting_address_and_more.py  0005_delete_profile.py
migrations_backup/profiles/: 0002_auto_20240628_1244.py
oc_lettings_site/: settings.py  urls.py  views.py
oc_lettings_site/migrations/: 0004_alter_profile_user.py
oc_lettings_site/templates/oc_lettings_site/: 404.html  500.html  base.html  index.html
oc_lettings_site/tests/: test_views.py
profiles/: models.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_auto_20240628_1244.py
profiles/templates/profiles/: index.html  profile.html
profiles/tests/: test_models.py  test_views.py
templates/: base.html  letting.html  lettings_index.html  profile.html  profiles_index.html
(+36 files in other folders)
