[tool.poetry]
name = "oc-lettings-site"
version = "0.1.0"
description = ""
authors = ["geo1310 <gbriche59@yahoo.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.6"
flake8 = "^7.1.0"
pytest-django = "^4.8.0"
black = "^24.4.2"
isort = "^5.13.2"
djhtml = "^3.0.6"
pycln = "^2.4.0"
pytest-html = "^4.1.1"
django-coverage = "^1.2.4"
coverage = "^7.5.4"
pytest-coverage = "^0.0"
sentry-sdk = {extras = ["django"], version = "^2.7.1"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
omit = ["*tests", "/docs/**"]

[tool.flake8]
max-line-length = 99
exclude = ".venv/, docs/"
extend-ignore = [
    # PEP 8 recommends to treat : in slices as a binary operator with the lowest priority, and to leave an equal
    # amount of space on either side, except if a parameter is omitted (e.g. ham[1 + 1 :]).
    # This behaviour may raise E203 whitespace before ':' warnings in style guide enforcement tools like Flake8.
    # Since E203 is not PEP 8 compliant, we tell Flake8 to ignore this warning.
    # https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#slices    
    "E203"
]

[tool.black]
line-length = 99

