[tool.poetry]
name = "oc-lettings-site"
version = "0.1.0"
description = ""
authors = ["geo1310 <gbriche59@yahoo.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.6"
sentry-sdk = {extras = ["django"], version = "^2.7.1"}
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"
whitenoise = "^6.7.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
docutils = "<0.21"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
pytest-django = "^4.8.0"
black = "^24.4.2"
isort = "^5.13.2"
djhtml = "^3.0.6"
pycln = "^2.4.0"
pytest-html = "^4.1.1"
django-coverage = "^1.2.4"
coverage = "^7.5.4"
pytest-coverage = "^0.0"
pre-commit = "^3.7.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "oc_lettings_site.settings"
python_files = "test_*.py"
norecursedirs = ["migrations", "migrations_backup"]
addopts = "-v"


[tool.coverage.run]
branch = true
source = ["oc_lettings_site"]
omit = [
    "**/tests/*",
    "**/migrations/*",
    "__*",
    "manage.py",
    "asgi.py",
    "wsgi.py",
]

[tool.djhtml]
fail_under = 0
rules = ["djhtml.rules.BasicChecksRule"]
ignore_files = ["docs/**", ".venv/**"]

[tool.flake8]
max-line-length = 99
exclude = "**/migrations/*,.venv/**,**/doc"
extend-ignore = [
    "E203",
]

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99
